# hive

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  clippy.toml  docker-compose.dev.yml  docker-compose.yml  hive.toml  justfile  release.toml
.claude/: settings.local.json
.claude-plugin/: marketplace.json
.github/: RELEASE.md
.github/workflows/: ci.yml  release.yml
crates/agentroom/: Cargo.toml
crates/agentroom/src/: main.rs
crates/agentroom/tests/: deprecation.rs
crates/hive-server/: Cargo.toml  Dockerfile
crates/hive-server/src/: admin.rs  agents.rs  auth.rs  config.rs  daemon.rs  db.rs  error.rs  main.rs  preferences.rs  rest_proxy.rs  rooms.rs  settings.rs  setup.rs  users.rs  util.rs  ws_relay.rs
crates/room-cli/: CHANGELOG.md  Cargo.toml  README.md
crates/room-cli/src/: cli.rs  client.rs  cmd_daemon.rs  history.rs  lib.rs  main.rs  paths.rs  plugin_cmd.rs  query.rs  registry.rs  upgrade.rs
crates/room-cli/src/broker/: admin.rs  auth.rs  commands.rs  daemon.rs  fanout.rs  handshake.rs  mod.rs  persistence.rs  service.rs  session.rs  state.rs  ws.rs
crates/room-cli/src/broker/daemon/: dispatcher.rs  lifecycle.rs  migration.rs  mod.rs  pid.rs
crates/room-cli/src/broker/ws/: mod.rs  rest.rs
crates/room-cli/src/oneshot/: agent.rs  list.rs  mod.rs  poll.rs  subscribe.rs  token.rs  transport.rs  who.rs
crates/room-cli/src/oneshot/poll/: commands.rs  filter_events.rs  filter_tier.rs  meta.rs  mod.rs  multi_room.rs
crates/room-cli/src/plugin/: bridge.rs  help.rs  mod.rs  queue.rs  schema.rs  stats.rs  status.rs
crates/room-cli/src/plugin/taskboard/: handlers.rs  mod.rs  task.rs
crates/room-cli/src/tui/: colors.rs  display.rs  dm.rs  event_loop.rs  frame.rs  input.rs  markdown.rs  mod.rs  panel.rs  parse.rs  render.rs  render_bots.rs  widgets.rs
crates/room-cli/tests/: auth.rs  broker.rs  cli_workflows.rs  daemon.rs  error_edge.rs  events.rs  integration.rs  manual_agent.rs  oneshot.rs  persistence_transport.rs  rest_query.rs  room_lifecycle.rs  scripted.rs  ws.rs  ws_smoke.rs
crates/room-cli/tests/common/: mod.rs
crates/room-daemon/: CHANGELOG.md  Cargo.toml
crates/room-daemon/src/: history.rs  lib.rs  paths.rs  query.rs
crates/room-daemon/src/broker/: admin.rs  agent_cleanup.rs  commands.rs  fanout.rs  handshake.rs  mod.rs  persistence.rs  service.rs  session.rs  state.rs  token_store.rs
crates/room-daemon/src/broker/commands/: handlers.rs  info.rs  mod.rs  plugin.rs  team.rs  tests.rs  validate.rs
crates/room-daemon/src/broker/daemon/: config.rs  lifecycle.rs
crates/room-daemon/src/broker/ws/: rest.rs
crates/room-daemon/src/plugin/: bridge.rs  loader.rs  mod.rs  queue.rs  schema.rs  stats.rs
crates/room-plugin-agent/: CHANGELOG.md  Cargo.toml
crates/room-plugin-agent/src/: lib.rs  personalities.rs
crates/room-plugin-hello/: CHANGELOG.md  Cargo.toml
crates/room-plugin-hello/src/: lib.rs
crates/room-plugin-taskboard/: CHANGELOG.md  Cargo.toml
crates/room-plugin-taskboard/src/: handlers.rs  lib.rs  task.rs
crates/room-protocol/: CHANGELOG.md  Cargo.toml  README.md
crates/room-protocol/src/: lib.rs  plugin.rs
crates/room-ralph/: CHANGELOG.md  Cargo.toml  README.md
crates/room-ralph/src/: agent_meta.rs  claude.rs  lib.rs  loop_runner.rs  main.rs  monitor.rs  personalities.rs  progress.rs  prompt.rs  room.rs
crates/room-ralph/tests/: integration.rs
docs/: README.md  agent-coordination.md  api-reference.md  architecture.md  authentication.md  broker-internals.md  commands.md  contributing.md  database-schema.md  deployment.md  design-253-room-visibility.md  design-agent-spawn.md  design-shared-knowledge.md  development.md  dms.md  permission-prompts.md  plugin.md  quick-start.md  ralph-setup.md  retro-2026-03-06.md  sprint-review-2026-03-06.md  testing.md  tips.md  troubleshooting.md  websocket-protocol.md  wire-format.md
docs/hive/: README.md  prd-agent-discovery.md  prd-team-provisioning.md  prd-workspace.md
docs/prd/: prd-hive-frontend.md  prd-hive-server.md  prd-workspace.md
docs/prd/agent/: prd-agent-health.md  prd-agent-plugin.md  prd-personality.md
docs/prd/hive/: README.md  prd-team-provisioning.md
docs/stories/backend/: US-BE-001-server-health.md  US-BE-003-websocket-relay.md  US-BE-003a-ws-relay-basic.md  US-BE-003b-ws-relay-performance.md  US-BE-004-rest-room-proxy.md  US-BE-007-room-send-proxy.md  US-BE-011-token-mapping.md  US-BE-012-agent-spawn.md  US-BE-015-agent-logs.md  US-BE-017-workspace-crud.md  (+18 more)
hive-web/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml
hive-web/e2e/: agents.spec.ts  auth-mh013.spec.ts  auth.spec.ts  backend-api.spec.ts  config.spec.ts  connection-status-mh026.spec.ts  create-room-mh014.spec.ts  db-error.spec.ts  delete-room-mh015.spec.ts  docker.spec.ts  empty-states.spec.ts  error-states.spec.ts  health.spec.ts  infrastructure.spec.ts  login.spec.ts  logout-mh009.spec.ts  member-list-mh020.spec.ts  mh004-setup.spec.ts  mh008-session.spec.ts  mh019-join-leave.spec.ts  mh021-send-message.spec.ts  mh022-websocket.spec.ts  mh023-message-history.spec.ts  mh024-auto-scroll.spec.ts  mh025-agent-list.spec.ts  mh027-ws-reconnect.spec.ts  mh028-preferences.spec.ts  negative.spec.ts  profile.spec.ts  room-settings-mh018.spec.ts  rooms-mh016.spec.ts  settings.spec.ts  switch-rooms-mh017.spec.ts  user-mgmt-mh012.spec.ts  workspaces.spec.ts  ws-relay.spec.ts
hive-web/src/: App.tsx  main.tsx
plugin/.claude-plugin/: plugin.json
plugin/commands/: check.md  send.md  setup.md
scripts/: check-changelog.sh  context-monitor.sh  pre-push.sh  progress-template.md  ralph-room.sh  test-check-changelog.sh  test-context-monitor.sh  test-ralph-room.sh
src/: broker.rs  client.rs  history.rs  lib.rs  main.rs  message.rs  oneshot.rs  tui.rs
src/broker/: auth.rs  commands.rs  mod.rs  state.rs
src/oneshot/: list.rs  mod.rs  poll.rs  token.rs
src/plugin/: help.rs  stats.rs
src/tui/: input.rs  mod.rs  render.rs  widgets.rs
tests/: integration.rs  ws_smoke.rs
(+164 files in other folders)
