[package]
name = "room"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "room"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
ratatui = "0.29"
crossterm = "0.28"
anyhow = "1"

[dev-dependencies]
tempfile = "3"
