[package]
name = "agentroom"
version = "0.5.0"
edition = "2021"
description = "Multi-user chat room for agent/human coordination over Unix domain sockets"
license = "MIT"
repository = "https://github.com/knoxio/room"
readme = "README.md"
keywords = ["cli", "chat", "agents", "coordination", "tui"]
categories = ["command-line-utilities", "asynchronous"]

[lib]
name = "room"
path = "src/lib.rs"

[[bin]]
name = "room"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
ratatui = "0.30"
crossterm = "0.29"
anyhow = "1"
unicode-width = "0.2"

[dev-dependencies]
tempfile = "3"
