[package]
name = "hive-server"
version = "0.1.0"
edition = "2021"
description = "Hive orchestration server — manages rooms, agents, and workspaces"
license = "MIT"
repository = "https://github.com/knoxio/hive"

[[bin]]
name = "hive"
path = "src/main.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
