[package]
name = "hive-server"
version = "0.1.0"
edition = "2021"
description = "Hive orchestration server — manages rooms, agents, and workspaces"
license = "MIT"
repository = "https://github.com/knoxio/hive"

[[bin]]
name = "hive"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-tungstenite = "0.28"
futures-util = "0.3"
rusqlite = { version = "0.34", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }

[dev-dependencies]
tempfile = "3"
