[package]
name = "room-daemon"
version = "3.4.0"
edition = "2021"
description = "Broker, plugin registry, and daemon runtime for the room multi-user chat system"
license = "MIT"
repository = "https://github.com/knoxio/room"

[lib]
name = "room_daemon"
path = "src/lib.rs"

[dependencies]
room-protocol = { path = "../room-protocol", version = "3.4.0" }
room-plugin-taskboard = { path = "../room-plugin-taskboard", version = "3.4.0" }
room-plugin-agent = { path = "../room-plugin-agent", version = "3.4.0" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
regex = "1"
libloading = "0.8"
axum = { version = "0.8.8", features = ["ws"] }
futures-util = { version = "=0.3.31", features = ["sink"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util"] }
tokio-tungstenite = "0.28"

[lints]
workspace = true
