[package]
name = "room-plugin-agent"
version = "3.4.0"
edition = "2021"
description = "Agent spawn/stop/list plugin for the room multi-user chat system"
license = "MIT"
repository = "https://github.com/knoxio/room"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
## Enable `#[no_mangle]` on the C ABI entry points. Required when building as
## a standalone cdylib for dynamic loading. Must be OFF when the crate is
## statically linked as an rlib (e.g. into room-daemon) to avoid symbol
## collisions with other plugins.
cdylib-exports = []

[dependencies]
room-protocol = { path = "../room-protocol", version = "3.4.0" }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
libc = "0.2"
toml = "0.8"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt", "macros"] }

[lints]
workspace = true
