[package]
name = "room-plugin-hello"
version = "3.5.1"
edition = "2021"
description = "Sample hello plugin for the room chat system — validates the dynamic plugin pipeline"
license = "MIT"
repository = "https://github.com/knoxio/room"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
## Enable `#[no_mangle]` on C ABI entry points for dynamic loading.
cdylib-exports = []

[dependencies]
room-protocol = { path = "../room-protocol", version = "3.5.1" }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
serde_json = "1"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }

[lints]
workspace = true
