[package]
name = "room-ralph"
version = "0.2.0"
edition = "2021"
description = "Autonomous agent wrapper for room — runs claude -p with auto-restart on context exhaustion"
license = "MIT"
repository = "https://github.com/knoxio/room"

[lib]
name = "room_ralph"
path = "src/lib.rs"

[[bin]]
name = "room-ralph"
path = "src/main.rs"

[dependencies]
room-protocol = { path = "../room-protocol", version = "2.0.1" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
