[package]
name = "room-ralph"
version = "0.4.0-rc.1"
edition = "2021"
description = "Autonomous agent wrapper for room — runs claude -p with auto-restart on context exhaustion"
license = "MIT"
repository = "https://github.com/knoxio/room"

[lib]
name = "room_ralph"
path = "src/lib.rs"

[[bin]]
name = "room-ralph"
path = "src/main.rs"

[dependencies]
room-protocol = { path = "../room-protocol", version = "3.0.0-rc.1" }
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
